# dicom-anonymization

./: .gitignore  .pre-commit-config.yaml  .release-plz.toml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile
.github/workflows/: ci-python.yml  ci.yml  claude-auto-review.yml  claude-review.yml  deploy-wasm.yml  pre-commit.yml  release-plz.yml  test-python.yml
bindings/python/: Cargo.toml  README.md  concurrent_example.py  multiprocessing_example.py  pyproject.toml  sequential_example.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_anonymizer.py
bindings/spin-http/: Cargo.toml  README.md  spin.toml
bindings/wasm/: Cargo.toml  README.md  package.json
bindings/wasm/src/: lib.rs
bindings/wasm/www/: app.js  dicom-anonymizer.js  index.html  styles.css
dicom-anonymization/: Cargo.toml  config_default.json
dicom-anonymization/benches/: anonymization_bench.rs
dicom-anonymization/src/: config.rs  lib.rs  processor.rs
dicom-anonymization/src/actions/: empty.rs  hash.rs  hash_date.rs  hash_uid.rs  keep.rs  mod.rs  no_action.rs  remove.rs  replace.rs  utils.rs
dicom-anonymization/src/config/: builder.rs  mod.rs  profile.rs  tag_action_map.rs  uid_root.rs
dicom-anonymization/tests/data/: test.dcm
dicom-anonymizer-spin/: Cargo.toml  README.md  spin.toml
dicom-anonymizer-spin/src/: lib.rs
src/: actions.rs  config.rs  hashing.rs  lib.rs  processor.rs  vr.rs
src/actions/: empty.rs  errors.rs  hash.rs  hash_date.rs  hash_uid.rs  keep.rs  mod.rs  no_action.rs  remove.rs  replace.rs  utils.rs
src/functions/: anonymize.rs  common.rs  date.rs  errors.rs  hash.rs  mod.rs  uid.rs
