[package]
name = "dicom-anonymization-wasm"
version = "0.3.1"
authors = ["carecoders <info@carecoders.io>"]
edition = "2021"
description = "DICOM anonymization (WASM)"
repository = "https://github.com/carecoders/dicom-anonymization"
readme = "README.md"
keywords = ["dicom", "dicom-files", "anonymization", "webassembly"]
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dicom-anonymization = { path = "../../dicom-anonymization" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde_json = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
opt-level = "s"
